--- a/package.json
+++ b/package.json
@@ -22,22 +22,14 @@
   },
   "homepage": "https://github.com/metrists/metrists-webpack#readme",
   "dependencies": {
-    "@babel/core": "^7.20.2",
     "copy-webpack-plugin": "^11.0.0",
     "node-emoji": "1.11.0",
     "chalk": "3.0.0",
-    "rimraf": "3.0.2",
-    "tsconfig-paths": "4.1.0",
-    "tsconfig-paths-webpack-plugin": "4.0.0",
-    "typescript": "4.8.3",
-    "webpack": "5.74.0",
-    "webpack-node-externals": "3.0.0"
+    "typescript": "4.8.3"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
     "@types/node-emoji": "1.8.2",
-    "@types/os-name": "3.1.0",
-    "@types/webpack-node-externals": "2.5.3",
     "@typescript-eslint/eslint-plugin": "5.38.1",
     "@typescript-eslint/parser": "5.38.1",
     "eslint": "8.24.0",
